--- a/app/templates/govSchemes.html
+++ b/app/templates/govSchemes.html
@@ -117,7 +117,7 @@
     </style>
   </head>
   <body>
-    <h1 style="margin-top: 30px">Governmet Schemes - Query Response</h1>
+    <h1 style="margin-top: 30px;">Government Schemes - Query Response</h1>
 
     <form method="POST">
       <label for="state">Select State:</label>
