--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -27,9 +27,9 @@
                         <a href="#ser">
                             <button class="see">See More</button>
                         </a>
-                        <button class="chatbot-btn" onclick="openChatbot()" style="display: block; margin: 20px auto 0; background: linear-gradient(90deg, black, #6610f2); color: #f0f0f0; font-weight: bold; border: none; padding: 10px 20px; font-size: 16px; cursor: pointer; border-radius: 25px; position: absolute; bottom: 10px; left: 50%; transform: translateX(-50%); width: 400px; box-shadow: 0px 4px 10px rgba(0, 0, 0, 0.2); transition: background 0.3s, transform 0.2s;">
+                        <!-- <button class="chatbot-btn" onclick="openChatbot()" style="display: block; margin: 20px auto 0; background: linear-gradient(90deg, black, #6610f2); color: #f0f0f0; font-weight: bold; border: none; padding: 10px 20px; font-size: 16px; cursor: pointer; border-radius: 25px; position: absolute; bottom: 10px; left: 50%; transform: translateX(-50%); width: 400px; box-shadow: 0px 4px 10px rgba(0, 0, 0, 0.2); transition: background 0.3s, transform 0.2s;">
                             Agro Chatbot
-                        </button>
+                        </button> -->
                     </div>
                     <div class="b2">
                         <img src="{{ url_for('static', filename='images/pot.png') }}" />
